src/test/deca/context/invalid/decaObjet/extends/02newWrongSubclass.deca
// Description:
//    Programme déclarant une objet qui n'est pas dynamiquement 
//    le sous type du type statique
//
// Resultats:
//    02newWrongSubclass.deca:18:15:
//
// Historique:
//    cree le 15/06/2022

class A {
}

class B extends A {
}

{
    B wrongB = new A();
}